20 November 2009: Wouter
	- contrib/split-itar.sh contributed by Tom Hendrikx.

19 November 2009: Wouter
	- better argument help for unbound-control.
	- iana portlist updated.

17 November 2009: Wouter
	- noted multiple entries for multiple domain names in example.conf.
	- iana portlist updated.

16 November 2009: Wouter
	- Fixed signer detection of CNAME responses without signatures.
	- Fix#282 libunbound memleak on error condition by Eric Sesterhenn.
	- Tests for CNAMEs to deeper trust anchors, secure and bogus.
	- svn tag 1.4.0rc1 made.

13 November 2009: Wouter
	- Fixed validation failure for CNAME to optout NSEC3 nodata answer.
	- unbound-host does not fail on type ANY.
	- Fixed wireparse failure to put RRSIGs together with data in some
	  long ANY mix cases, which fixes validation failures.

12 November 2009: Wouter
	- iana portlist updated.
	- fix manpage errors reported by debian lintian.
	- review comments.
	- fixup very long vallog2 level error strings.
	
11 November 2009: Wouter
	- ldns tarball updated (to 1.6.2).
	- review comments.

10 November 2009: Wouter
	- Thanks to Surfnet found bug in new dnssec-retry code that failed
	  to combine well when combined with DLV and a particular failure. 
	- Fixed unbound-control -h output about argument optionality.
	- review comments.

5 November 2009: Wouter
	- lint fixes and portability tests.
	- better error text for multiple domain keys in one autotrust file.

2 November 2009: Wouter
	- Fix bug where autotrust does not work when started with a DS.
	- Updated GOST unit tests for unofficial algorithm number 249
	  and DNSKEY-format changes in draft version -01.

29 October 2009: Wouter
	- iana portlist updated.
	- edns-buffer-size option, default 4096.
	- fixed do-udp: no.

28 October 2009: Wouter
	- removed abort on prealloc failure, error still printed but softfail.
	- iana portlist updated.
	- RFC 5702: RSASHA256 and RSASHA512 support enabled by default.