@@ -1,3 +1,6 @@
+23 November 2009: Wouter
+	- Patch from David Hubbard for libunbound manual page.
+
 20 November 2009: Wouter
 	- contrib/split-itar.sh contributed by Tom Hendrikx.
 
